--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:db2://db2.in2.allegiantair.com:50001/CMSDB
+spring.datasource.username=g4dev
+spring.datasource.password=L0ck1tUp
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
